# WebAnalyzer

./: .env.example  .gitignore  CHANGELOG.md  CHECKUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.TR.MD  README.md  SECURITY.md  api.py  bulk_scan.py  check_progress.py  config.py  docker-compose.yml  domains-check.py  main.py  monitor.py  package-lock.json  pyproject.toml  requirements.txt  run.sh  setup.sh  socket.py  webanalyzer_config.json  webanalyzer_socket.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  publish-pypi.yml
bulk/: loader.py  processor.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  config.js  index.css
database/: db_manager.py  schema.sql
docs/: Architecture.md  Modules.md
logs/: .gitkeep
logs/c4softwarestudio.com/: c4softwarestudio.com-sub.txt  content_scan_c4softwarestudio.com_20250312-214240.json  results.json  seo_analysis_results.txt  sitemap.xml  takeover_summary_c4softwarestudio.com.json
logs/furkandincer.com/: content_scan_furkandincer.com_20250312-213540.json  furkandincer.com-sub.txt  results.json  robots.txt  (+2 more)
modules/: advanced_content_scanner.py  api_security_scanner.py  archive_spy.py  attack_path_planner.py  cloudflare_bypass.py  contact_spy.py  domain_dns.py  domain_info.py  geo_analysis.py  nmap_zero_day.py  phishing_detector.py  security_analysis.py  seo_analysis.py  ssl_association.py  subdomain_takeover.py  subfinder_tool.py  universal_adapter.py  web_technologies.py
payloads/: api_endpoints.txt
tests/: test_main.py
utils/: module_wrapper.py  session_manager.py  utils.py
(+38 files in other folders)
