[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webanalyzer-security"
version = "3.6.0"
description = "Enterprise Domain Security & OSINT Analysis Platform"
readme = "README.md"
authors = [
    { name = "Furkan Dincer", email = "hi@c4softwarestudio.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0",
    "pyOpenSSL>=20.0.0",
    "dnspython>=2.1.0",
    "validators>=0.18.0",
    "tldextract>=3.1.0",
    "iso3166>=2.0.0",
    "pycountry>=20.7.3",
    "phonenumbers>=8.12.0",
    "timezonefinder>=5.2.0",
    "langdetect>=1.0.9",
    "aiohttp>=3.8.0",
    "fake_useragent>=1.1.0",
    "mysql-connector-python>=8.0.0",
    "nest_asyncio>=1.5.0",
    "psutil>=5.9.0",
    "PyJWT>=2.4.0",
    "python-whois>=0.8.0",
    "tabulate>=0.8.0",
    "tqdm>=4.60.0",
    "python-nmap>=0.7.1",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "rich>=13.0.0"
]

[project.urls]
"Homepage" = "https://github.com/frkndncr/WebAnalyzer"
"Bug Tracker" = "https://github.com/frkndncr/WebAnalyzer/issues"

[project.scripts]
webanalyzer = "main:run_cli"

[tool.setuptools]
packages = ["bulk", "modules", "database", "utils"]
py-modules = ["main", "config", "api", "bulk_scan", "monitor", "check_progress", "domains-check"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.sql", "*.json"]
